ctypes_canapedll/CANapAPI_stripped.h

struct TApplicationID
{
  enum TApplicationType tApplicationType;
  char tApplicationPath[_MAX_PATH];
};
typedef enum {
  TYPE_UNKNOWN, 
  TYPE_INT,     
  TYPE_FLOAT,   
  TYPE_DOUBLE,  
  TYPE_SIGNED,  
  TYPE_UNSIGNED,
  TYPE_STRING   
}TAsap3DataType;
typedef enum {
 DBTYPE_MEASUREMENT=1,  
 DBTYPE_CHARACTERISTIC, 
 DBTYPE_ALL             
}TAsap3DBOType;
struct tAsap3Hdl;
typedef struct tAsap3Hdl *TAsap3Hdl;
typedef unsigned long *TRecorderID;
typedef unsigned short TModulHdl;
typedef unsigned long  TScriptHdl;
typedef unsigned long TTime;
typedef struct {
  TModulHdl module;         
  unsigned short taskId;    
  unsigned short noSamples; 
} tFifoSize;
typedef struct
{
 unsigned long countOfEntires;  
 unsigned long timestamp;              
 #if 1
 double *data;                  
 #else
 TReservedOffset_stream data;
 #endif
} tSampleObject;
typedef enum {
  ASAP3_DRIVER_UNKNOWN     = 0,        
  ASAP3_DRIVER_CCP         = 1,        
  ASAP3_DRIVER_XCP         = 2,        
  ASAP3_DRIVER_CAN         = 20,       
  ASAP3_DRIVER_HEXEDIT     = 40,       
  ASAP3_DRIVER_ANALOG      = 50,       
  ASAP3_DRIVER_CANOPEN     = 60,       
  ASAP3_DRIVER_CANDELA     = 70,       
  ASAP3_DRIVER_ENVIRONMENT = 80,       
  ASAP3_DRIVER_LIN         = 90,       
  ASAP3_DRIVER_FLX         = 100,      
  ASAP3_DRIVER_FUNC        = 110,      
  ASAP3_DRIVER_NIDAQMX     = 120,      
  ASAP3_DRIVER_XCP_RAMSCOPE= 130,      
  ASAP3_DRIVER_SYSTEM      = 140,      
  ASAP3_DRIVER_ETH         = 150,      
  ASAP3_DAIO_SYSTEM        = 160,      
  ASAP3_DRIVER_SOME_IP     = 170,      
  ASAP3_DRIVER_DLT         = 180       
} tDriverType;
typedef enum
{
 eT_MEASUREMENT_STOPPED    = 0, 
 eT_MEASUREMENT_INIT       = 1, 
 eT_MEASUREMENT_STOP_ON_START       = 2, 
 eT_MEASUREMENT_EXIT       = 3, 
 eT_MEASUREMENT_THREAD_RUNNING      = 4, 
 eT_MEASUREMENT_RUNNING    = 5  
}tMeasurementState;
typedef struct {
  int dllMainVersion; 
  int dllSubVersion;  
  int dllRelease;     
  char osVersion[MAX_OS_VERSION];
  int osRelease;      
} version_t;
typedef struct {
  int MainVersion;  
  int SubVersion;   
  int ServicePack;  
  char Application[30]; 
} Appversion;
bool ASAP3_EXPORT CALL_CONV Asap3IsUsCANapeVersion(int *USVersion);
extern bool ASAP3_EXPORT CALL_CONV Asap3GetVersion(version_t * version);
extern bool ASAP3_EXPORT CALL_CONV Asap3SetTCPOptions(const char* ipAddress, unsigned long portNumber);
extern bool ASAP3_EXPORT CALL_CONV Asap3Init(TAsap3Hdl * hdl,
                                             unsigned long responseTimeout,
                                             const char *workingDir,
                                             unsigned long fifoSize,
                                             bool debugMode);
extern bool ASAP3_EXPORT CALL_CONV Asap3Init2(TAsap3Hdl * hdl,
                                              unsigned long responseTimeout,
                                              const char *workingDir,
                                              unsigned long fifoSize,
                                              unsigned long sampleSize,
                                              bool debugMode);
extern bool ASAP3_EXPORT CALL_CONV Asap3Init3(TAsap3Hdl * hdl,
                                              unsigned long responseTimeout,
                                              const char *workingDir,
                                              unsigned long fifoSize,
                                              unsigned long sampleSize,
                                              bool debugMode,
                                              bool clearDeviceList);
extern bool ASAP3_EXPORT CALL_CONV Asap3Init4(TAsap3Hdl * hdl,
                                              unsigned long responseTimeout,
                                              const char *workingDir,
                                              unsigned long fifoSize,
                                              unsigned long sampleSize,
                                              bool debugMode,
                                              bool clearDeviceList,
                                              bool bHexmode);
extern bool ASAP3_EXPORT CALL_CONV Asap3Init5(TAsap3Hdl * hdl,
                                              unsigned long responseTimeout,
                                              const char *workingDir,
                                              unsigned long fifoSize,
                                              unsigned long sampleSize,
                                              bool debugMode,
                                              bool clearDeviceList,
                                              bool bHexmode,
                                              bool bModalMode);
extern bool ASAP3_EXPORT CALL_CONV Asap3Init6(TAsap3Hdl *hdl,
                                       unsigned long responseTimeout,
                                       const char *projectFile,
                                       unsigned long fifoSize,
                                       unsigned long sampleSize,
                                       bool debugMode,
                                       bool clearDeviceList,
                                       bool bHexmode,
                                       bool bModalMode,
                                       struct TApplicationID  *strApplication);
extern bool ASAP3_EXPORT CALL_CONV Asap3GetProjectDirectory(TAsap3Hdl hdl, char* directory, unsigned long *size);
extern bool ASAP3_EXPORT CALL_CONV Asap3Exit(TAsap3Hdl hdl);