ctypes_canapedll/CANapAPI.py


TYPE_FLOAT = (TYPE_INT + 1)# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 521

TYPE_DOUBLE = (TYPE_FLOAT + 1)# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 521

TYPE_SIGNED = (TYPE_DOUBLE + 1)# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 521

TYPE_UNSIGNED = (TYPE_SIGNED + 1)# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 521

TYPE_STRING = (TYPE_UNSIGNED + 1)# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 521

TAsap3DataType = enum_anon_20# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 521

enum_anon_21 = c_int# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 526

DBTYPE_MEASUREMENT = 1# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 526

DBTYPE_CHARACTERISTIC = (DBTYPE_MEASUREMENT + 1)# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 526

DBTYPE_ALL = (DBTYPE_CHARACTERISTIC + 1)# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 526

TAsap3DBOType = enum_anon_21# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 526

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 537
class struct_tAsap3Hdl(Structure):
    pass

TAsap3Hdl = POINTER(struct_tAsap3Hdl)# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 538

TRecorderID = POINTER(c_ulong)# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 547

TModulHdl = c_ushort# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 549

TScriptHdl = c_ulong# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 550

TTime = c_ulong# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 551

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 556
class struct_anon_22(Structure):
    pass

struct_anon_22._pack_ = 1
struct_anon_22.__slots__ = [
    'module',
    'taskId',
    'noSamples',
]
struct_anon_22._fields_ = [
    ('module', TModulHdl),
    ('taskId', c_ushort),
    ('noSamples', c_ushort),
]

tFifoSize = struct_anon_22# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 556

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 566
class struct_anon_23(Structure):
    pass

struct_anon_23._pack_ = 1
struct_anon_23.__slots__ = [
    'countOfEntires',
    'timestamp',
    'data',
]
struct_anon_23._fields_ = [
    ('countOfEntires', c_ulong),
    ('timestamp', c_ulong),
    ('data', POINTER(c_double)),
]

tSampleObject = struct_anon_23# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 566

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 574
class struct_tSampleObject(Structure):
    pass

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 567
class struct_tSampleBlockObject(Structure):
    pass

struct_tSampleBlockObject._pack_ = 1
struct_tSampleBlockObject.__slots__ = [
    'has_buffer_Overrun',
    'has_Error',
    'initialized',
    'countofValidEntries',
    'countofInitilizedEntries',
    'tSample',
]
struct_tSampleBlockObject._fields_ = [
    ('has_buffer_Overrun', c_int),
    ('has_Error', c_long),
    ('initialized', c_int),
    ('countofValidEntries', c_long),
    ('countofInitilizedEntries', c_long),
    ('tSample', POINTER(POINTER(struct_tSampleObject))),
]

enum_anon_24 = c_int# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 596

ASAP3_DRIVER_UNKNOWN = 0# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 596

ASAP3_DRIVER_CCP = 1# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 596

ASAP3_DRIVER_XCP = 2# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 596

ASAP3_DRIVER_CAN = 20# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 596

ASAP3_DRIVER_HEXEDIT = 40# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 596

ASAP3_DRIVER_ANALOG = 50# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 596

ASAP3_DRIVER_CANOPEN = 60# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 596

ASAP3_DRIVER_CANDELA = 70# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 596

ASAP3_DRIVER_ENVIRONMENT = 80# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 596

ASAP3_DRIVER_LIN = 90# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 596

ASAP3_DRIVER_FLX = 100# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 596

ASAP3_DRIVER_FUNC = 110# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 596

ASAP3_DRIVER_NIDAQMX = 120# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 596

ASAP3_DRIVER_XCP_RAMSCOPE = 130# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 596

ASAP3_DRIVER_SYSTEM = 140# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 596

ASAP3_DRIVER_ETH = 150# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 596

ASAP3_DAIO_SYSTEM = 160# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 596

ASAP3_DRIVER_SOME_IP = 170# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 596

ASAP3_DRIVER_DLT = 180# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 596

tDriverType = enum_anon_24# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 596

enum_anon_25 = c_int# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 606

eT_MEASUREMENT_STOPPED = 0# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 606

eT_MEASUREMENT_INIT = 1# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 606

eT_MEASUREMENT_STOP_ON_START = 2# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 606

eT_MEASUREMENT_EXIT = 3# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 606

eT_MEASUREMENT_THREAD_RUNNING = 4# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 606

eT_MEASUREMENT_RUNNING = 5# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 606

tMeasurementState = enum_anon_25# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 606

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 624
class struct_anon_26(Structure):
    pass

struct_anon_26._pack_ = 1
struct_anon_26.__slots__ = [
    'dllMainVersion',
    'dllSubVersion',
    'dllRelease',
    'osVersion',
    'osRelease',
]
struct_anon_26._fields_ = [
    ('dllMainVersion', c_int),
    ('dllSubVersion', c_int),
    ('dllRelease', c_int),
    ('osVersion', c_char * int(50)),
    ('osRelease', c_int),
]

version_t = struct_anon_26# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 624

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 631
class struct_anon_27(Structure):
    pass

struct_anon_27._pack_ = 1
struct_anon_27.__slots__ = [
    'MainVersion',
    'SubVersion',
    'ServicePack',
    'Application',
]
struct_anon_27._fields_ = [
    ('MainVersion', c_int),
    ('SubVersion', c_int),
    ('ServicePack', c_int),
    ('Application', c_char * int(30)),
]

Appversion = struct_anon_27# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 631

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 691
if _libs["CANapAPI64.dll"].has("Asap3IsUsCANapeVersion", "stdcall"):
    Asap3IsUsCANapeVersion = _libs["CANapAPI64.dll"].get("Asap3IsUsCANapeVersion", "stdcall")
    Asap3IsUsCANapeVersion.argtypes = [POINTER(c_int)]
    Asap3IsUsCANapeVersion.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 693
if _libs["CANapAPI64.dll"].has("Asap3GetVersion", "stdcall"):
    Asap3GetVersion = _libs["CANapAPI64.dll"].get("Asap3GetVersion", "stdcall")
    Asap3GetVersion.argtypes = [POINTER(version_t)]
    Asap3GetVersion.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 694
if _libs["CANapAPI64.dll"].has("Asap3SetTCPOptions", "stdcall"):
    Asap3SetTCPOptions = _libs["CANapAPI64.dll"].get("Asap3SetTCPOptions", "stdcall")
    Asap3SetTCPOptions.argtypes = [String, c_ulong]
    Asap3SetTCPOptions.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 695
if _libs["CANapAPI64.dll"].has("Asap3Init", "stdcall"):
    Asap3Init = _libs["CANapAPI64.dll"].get("Asap3Init", "stdcall")
    Asap3Init.argtypes = [POINTER(TAsap3Hdl), c_ulong, String, c_ulong, c_bool]
    Asap3Init.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 700
if _libs["CANapAPI64.dll"].has("Asap3Init2", "stdcall"):
    Asap3Init2 = _libs["CANapAPI64.dll"].get("Asap3Init2", "stdcall")
    Asap3Init2.argtypes = [POINTER(TAsap3Hdl), c_ulong, String, c_ulong, c_ulong, c_bool]
    Asap3Init2.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 706
if _libs["CANapAPI64.dll"].has("Asap3Init3", "stdcall"):
    Asap3Init3 = _libs["CANapAPI64.dll"].get("Asap3Init3", "stdcall")
    Asap3Init3.argtypes = [POINTER(TAsap3Hdl), c_ulong, String, c_ulong, c_ulong, c_bool, c_bool]
    Asap3Init3.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 713
if _libs["CANapAPI64.dll"].has("Asap3Init4", "stdcall"):
    Asap3Init4 = _libs["CANapAPI64.dll"].get("Asap3Init4", "stdcall")
    Asap3Init4.argtypes = [POINTER(TAsap3Hdl), c_ulong, String, c_ulong, c_ulong, c_bool, c_bool, c_bool]
    Asap3Init4.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 721
if _libs["CANapAPI64.dll"].has("Asap3Init5", "stdcall"):
    Asap3Init5 = _libs["CANapAPI64.dll"].get("Asap3Init5", "stdcall")
    Asap3Init5.argtypes = [POINTER(TAsap3Hdl), c_ulong, String, c_ulong, c_ulong, c_bool, c_bool, c_bool, c_bool]
    Asap3Init5.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 730
if _libs["CANapAPI64.dll"].has("Asap3Init6", "stdcall"):
    Asap3Init6 = _libs["CANapAPI64.dll"].get("Asap3Init6", "stdcall")
    Asap3Init6.argtypes = [POINTER(TAsap3Hdl), c_ulong, String, c_ulong, c_ulong, c_bool, c_bool, c_bool, c_bool, POINTER(struct_TApplicationID)]
    Asap3Init6.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 740
if _libs["CANapAPI64.dll"].has("Asap3GetProjectDirectory", "stdcall"):
    Asap3GetProjectDirectory = _libs["CANapAPI64.dll"].get("Asap3GetProjectDirectory", "stdcall")
    Asap3GetProjectDirectory.argtypes = [TAsap3Hdl, String, POINTER(c_ulong)]
    Asap3GetProjectDirectory.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 741
if _libs["CANapAPI64.dll"].has("Asap3Exit", "stdcall"):
    Asap3Exit = _libs["CANapAPI64.dll"].get("Asap3Exit", "stdcall")
    Asap3Exit.argtypes = [TAsap3Hdl]
    Asap3Exit.restype = c_bool
